--- a/Peer-to-Peer Remote Car Racing/Base.lproj/LaunchScreen.storyboard
+++ b/Peer-to-Peer Remote Car Racing/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina5_9" orientation="portrait">
+    <device id="retina5_9" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -14,15 +14,22 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="812" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ios-background-2" translatesAutoresizingMaskIntoConstraints="NO" id="P0p-LF-GtM">
-                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <rect key="frame" x="0.0" y="0.0" width="812" height="375"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Peer-to-Peer Remote Car Racing" textAlignment="center" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.29999999999999999" translatesAutoresizingMaskIntoConstraints="NO" id="sZH-rD-n2k">
-                                <rect key="frame" x="18.666666666666657" y="253.33333333333337" width="337.66666666666674" height="143"/>
+                                <rect key="frame" x="40.666666666666686" y="69" width="730.66666666666652" height="143"/>
                                 <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="55"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <size key="shadowOffset" width="1" height="1"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.25" translatesAutoresizingMaskIntoConstraints="NO" id="XaX-yg-xB8">
+                                <rect key="frame" x="188.66666666666666" y="217.66666666666666" width="434.66666666666674" height="51.999999999999972"/>
+                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                                 <size key="shadowOffset" width="1" height="1"/>
@@ -30,13 +37,16 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="P0p-LF-GtM" secondAttribute="bottom" id="Fi2-Ha-3DF"/>
-                            <constraint firstItem="sZH-rD-n2k" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.8" id="O8H-wK-A5p"/>
-                            <constraint firstItem="P0p-LF-GtM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="OgN-O8-md2"/>
-                            <constraint firstItem="P0p-LF-GtM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ZY8-Te-vD3"/>
+                            <constraint firstItem="XaX-yg-xB8" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="1.3" id="EM9-VR-ADN"/>
+                            <constraint firstItem="XaX-yg-xB8" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="EXR-dt-yd2"/>
+                            <constraint firstAttribute="bottom" secondItem="P0p-LF-GtM" secondAttribute="bottom" id="Fi2-Ha-3DF"/>
+                            <constraint firstItem="sZH-rD-n2k" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.75" id="O8H-wK-A5p"/>
+                            <constraint firstItem="P0p-LF-GtM" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="OgN-O8-md2"/>
+                            <constraint firstItem="P0p-LF-GtM" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="ZY8-Te-vD3"/>
                             <constraint firstItem="sZH-rD-n2k" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.9" id="ZZr-Hk-Qis"/>
-                            <constraint firstItem="P0p-LF-GtM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rQt-OB-ykH"/>
+                            <constraint firstItem="P0p-LF-GtM" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="rQt-OB-ykH"/>
                             <constraint firstItem="sZH-rD-n2k" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="srd-7J-IYQ"/>
+                            <constraint firstItem="XaX-yg-xB8" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.6" id="wvj-5C-o4f"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
